@@ -11,6 +11,11 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+=======
+Tag: V00-03-36
+2016-02-12 Mikhail S. Dubrovin
+- PyDetectorAccess.raw_data_cspad2x2 - hide configuration wornings under pbits (PSAS-139)
+
 Tag: V00-03-35
 2016-02-11 Christopher O'Grady
 - Remove print statement from ControlDataDetector
